# basics_polars

./: .gitignore  .pre-commit-config.yaml  polars.ipynb  polars1.ipynb  pyproject.toml
