[tool.poetry]
name = "basics-polars"
version = "0.1.0"
description = ""
authors = ["houdataali <houdataali@gmail.com>"]
readme = "README.md"
packages = [{include = "basics_polars"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
polars = "^0.16.18"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
